# py_playground

./: .gitignore  README.md  pose_visualization.ipynb  pose_visualization.py  pyproject.toml
notebooks/: pose_visualization.ipynb
scripts/: nvidia-model-query.sh
src/py_playground/: __init__.py
src/py_playground/cli/: __init__.py  main.py
src/py_playground/visualization/: __init__.py  pose.py
tests/: __init__.py  test_pose.py
